package org.springframework.demo3.exception;

public class BeansException extends Exception {
  public BeansException(String msg) {
    super(msg);
  }
}