package org.springframework.demo3.resource;

import java.util.Iterator;

public interface Resource extends Iterator<Object> {
}